add jwt verification middleware
